# banalata

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
src/: __init__.py
src/banalata/: __init__.py  poem_classifier.py  s00_model.py  s01_prepare_data.py  s02_train_tokenizer.py  s03_encode_data.py  s04_train_model.py  s05_generate.py  s06_export.py
src/banalata/checkpoints/: ckpt_best.pt
src/banalata/data/: author_tokens.txt
src/banalata/tokenizer/: bengali_bpe.model  bengali_bpe.vocab  tokenizer_config.json
